# file2md

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/file2md/: __init__.py  cli.py  convert.py  docx_converter.py  normalize.py  pdf.py  utils.py  web.py
src/file2md/templates/: index.html
tests/: conftest.py  test_cli.py  test_convert.py  test_docx.py  test_normalize.py  test_pdf.py  test_web.py
